--- a/Calc_IMT/Calc_IMT.csproj
+++ b/Calc_IMT/Calc_IMT.csproj
@@ -46,16 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,7 +92,15 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Images\Female\fat.png" />
+    <Content Include="Images\Female\norm.png" />
+    <Content Include="Images\Female\slim.png" />
     <Content Include="Images\icons8-сгибания-с-гантелями-80.png" />
+    <Content Include="Images\Male\fat.png" />
+    <Content Include="Images\Male\norm.png" />
+    <Content Include="Images\Male\slim.png" />
+    <None Include="Resources\3317.jpg" />
+    <None Include="Resources\icons8-athlete-100.png" />
     <None Include="Resources\icons8-сгибания-с-гантелями-80.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
